<resources>
    <string name="app_name">DottSample</string>
    <string name="title_activity_maps">Dott Nearby Venues</string>
    <string name="location_failed">Last Location Fetch Failed, Please enable location in settings!</string>
    <string name="loading">Loading...</string>
    <string name="venue_not_selected">Venue Not Selected</string>
    <string name="missing_field">Missing Field</string>
    <string name="error">Error!</string>
    <string name="permission_required">Location Permission Required</string>
    <string name="permission_required_description">We need location permission to show you nearby venues. Kindly grant.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open Settings</string>
    <string name="unexpected_error">Unexpected error!</string>
</resources>
